--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 .calculator {
   background-color: antiquewhite;
-  width: 400px; 
+  width: 325px; 
   border: 20px #818589; 
   border-style: solid; 
   padding: 20px; 
@@ -18,15 +18,18 @@ body {
 button {
   padding: 10px; 
   margin: 2px; 
-  width: 50px; 
+  width: 70px; 
   text-align: center; 
-}
+  height: 50px;
+  font-size: 20px;
+  }
 
-.clear-button {
-  width: 100px; 
+
+#clear-button {
+  width: 148px; 
 }
-.delete-button {
-  width: 100px; 
+#delete-button {
+  width: 148px; 
 }
 
 .display-screen {
@@ -34,7 +37,24 @@ button {
   border: 5px #818589; 
   border-style: solid; 
   margin: 5px; 
-  margin-top: -10px; 
+  margin-top: 0px; 
+  margin-bottom: 4px; 
   border-radius: 5px;
+  text-align: end;
+  width: 278px; 
+  height: 20px; 
+  margin-right: auto; 
+  margin-left: auto; 
+  font-size: 20px; 
+
+
   
 }
+.row1 {
+  padding: 3px; 
+}
+
+.row3 {
+  padding: 3px; 
+}
+
