--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
   border-style: solid; 
   padding: 20px; 
   border-radius: 5px;
+  margin-right: auto; 
+  margin-left: auto; 
+  margin-top: 100px; 
   
 }
 
