--- a/style.css
+++ b/style.css
@@ -76,3 +76,12 @@ button {
   padding: 3px; 
 }
 
+.footer {
+  position: absolute;
+  bottom: 0; 
+  left: 0; 
+  right: 0; 
+  margin: 8px; 
+
+}
+
